src/objects/NPS__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NPS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CES_Score__c</fullName>
        <label>CES Score</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>NPS_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
        <relationshipName>NPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Transaction__c</fullName>
        <label>Link to Transaction</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NPS_Detailed_Comments__c</fullName>
        <label>NPS Detailed Comments</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Touchpoint_Date__c</fullName>
        <label>NPS Touchpoint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Type__c</fullName>
        <label>NPS Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promoters</fullName>
                </value>
                <value>
                    <fullName>Detractors</fullName>
                </value>
                <value>
                    <fullName>Passives</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                    <isActive>false</isActive>
                    <label>Complaint</label>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                    <isActive>false</isActive>
                    <label>Detractor</label>
                </value>
                <value>
                    <fullName>Passive</fullName>
                    <isActive>false</isActive>
                    <label>Passive</label>
                </value>
                <value>
                    <fullName>Promotor</fullName>
                    <isActive>false</isActive>
                    <label>Promotor</label>
                </value>
                <value>
                    <fullName>Quote</fullName>
                    <isActive>false</isActive>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Service Order</fullName>
                    <isActive>false</isActive>
                    <label>Service Order</label>
                </value>
                <value>
                    <fullName>etc</fullName>
                    <isActive>false</isActive>
                    <label>etc</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>NPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>NPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondent_Serial_ID__c</fullName>
        <label>Respondent Serial ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relation (TP0)</fullName>
                </value>
                <value>
                    <fullName>Account Management (TP1)</fullName>
                </value>
                <value>
                    <fullName>Commercial Deal (TP2)</fullName>
                </value>
                <value>
                    <fullName>Business/Online Order (TP3)</fullName>
                </value>
                <value>
                    <fullName>Installation (TP4)</fullName>
                </value>
                <value>
                    <fullName>Invoice (TP5)</fullName>
                </value>
                <value>
                    <fullName>Collection (TP6)</fullName>
                </value>
                <value>
                    <fullName>Customer Care (TP7)</fullName>
                </value>
                <value>
                    <fullName>Case (TP8)</fullName>
                </value>
                <value>
                    <fullName>Technical Helpdesk (TP9)</fullName>
                </value>
                <value>
                    <fullName>After Service Technician Visit (TP10)</fullName>
                </value>
                <value>
                    <fullName>Operating Ingredients (TP11)</fullName>
                </value>
                <value>
                    <fullName>Route Sales (TP12)</fullName>
                </value>
                <value>
                    <fullName>Indirect Ingredients (TP13)</fullName>
                </value>
                <value>
                    <fullName>Telesales Ingredients (TP14)</fullName>
                </value>
                <value>
                    <fullName>Sales/Installation Moment (TP15)</fullName>
                </value>
                <value>
                    <fullName>No Description (TP16)</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                    <isActive>false</isActive>
                    <label>Complaint</label>
                </value>
                <value>
                    <fullName>Quote</fullName>
                    <isActive>false</isActive>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Sales/Installation Moment (TP 15)</fullName>
                    <isActive>false</isActive>
                    <label>Sales/Installation Moment (TP 15)</label>
                </value>
                <value>
                    <fullName>Service Order</fullName>
                    <isActive>false</isActive>
                    <label>Service Order</label>
                </value>
                <value>
                    <fullName>Telesales Ingredients (TP15)</fullName>
                    <isActive>false</isActive>
                    <label>Telesales Ingredients (TP15)</label>
                </value>
                <value>
                    <fullName>etc</fullName>
                    <isActive>false</isActive>
                    <label>etc</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utimate_Parent_Account__c</fullName>
        <formula>Account__r.Ultimate_Parent_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utimate Parent Account</label>
        <type>Text</type>
    </fields>
    <label>NPS Detail</label>
    <nameField>
        <displayFormat>NPS{0000000000}</displayFormat>
        <label>NPS Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>